--- a/history_app/static/css/history.css
+++ b/history_app/static/css/history.css
@@ -30,12 +30,12 @@ header h2{
 .quiz{
     position: relative;
     width: 325px;
-    height: 400px;
+    height: 500px;
     background-color: #373737;
     border-radius: 10px;  
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 15px;
     gap: 10px; 
     color: white;
 }
@@ -54,4 +54,10 @@ header h2{
 }
 .quiz p{
     font-weight: 300;
+}
+.quiz img {
+    width: 100%;
+    height: 165px;
+    object-fit: cover;
+    border-radius: 5px;
 }
