--- a/home_app/static/css/home.css
+++ b/home_app/static/css/home.css
@@ -37,7 +37,6 @@ span{
     font-weight: 300;
     text-align: center;
 }
-
 #name{
     
     font-family: Inter;
@@ -72,6 +71,8 @@ span{
     background-color: #3d3d3d;
     border-radius: 10px;
     font-family: Inter;
+    text-decoration: none;
+    color: white;
 }
 
 .description {
@@ -88,4 +89,10 @@ h4 {
     font-size: 18px;
     font-weight: 300;
     opacity: 0.8;
+}
+.quiz img {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 10px;
 }
