--- a/library_app/static/css/create_quiz.css
+++ b/library_app/static/css/create_quiz.css
@@ -512,6 +512,7 @@ textarea:focus, input:focus{
 .uploadLabel img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .uploadLabel div {
