--- a/library_app/static/css/library.css
+++ b/library_app/static/css/library.css
@@ -6,10 +6,10 @@
     width: calc(100% - 220px);
     height: 80px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 1050px;
-    background-color: 262626;
+    padding: 0 130.5px;
+    background-color: #262626;
 }
 .created-by-me-create h2{
     font-family: 'Inter';
@@ -122,6 +122,7 @@ textarea:focus, input:focus{
     top: 315px;
     gap: 10px;
     padding: 0 180px;
+    padding-bottom: 25px;
     flex-wrap: wrap;    
 }
 
@@ -131,7 +132,7 @@ textarea:focus, input:focus{
     align-items: center;
     justify-content: start;
     width: 400px;
-    height: 350px;
+    height: 450px;
     background-color: #2a2a2a;
     border-radius: 15px;
     padding: 10px;
@@ -145,12 +146,13 @@ textarea:focus, input:focus{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px;
     width: 100%;
 }
 
 .quiz h3 {
     font-size: 24px;
+    width: 100%;
+    
 }
 
 .quiz p {
@@ -159,5 +161,20 @@ textarea:focus, input:focus{
 }
 
 #desc {
-    height: 140px;
+    height: 100px;
+}
+.quiz img {
+    width: 100%;
+    height: 165px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.quiz-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    height: 60%;
+    width: 100%;
 }
