--- a/host_app/static/css/static.css
+++ b/host_app/static/css/static.css
@@ -48,6 +48,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 10px;
 }
 .question {
     display: flex;
