--- a/library_app/static/css/library.css
+++ b/library_app/static/css/library.css
@@ -139,6 +139,8 @@ textarea:focus, input:focus{
     gap: 10px;
     color: white;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+    border: 0;
+    cursor: pointer;
 
 }
 
