Added alpha test multiplay with websockets

--- a/execution_app/templates/enter_code.html
+++ b/execution_app/templates/enter_code.html
@@ -12,10 +12,10 @@
         </header>
         
 
-            <form method="post" class = 'form_enter'>
+            <form method="get" action="/execution" class = 'form_enter'>
                 <p>GPTQuiz</p>
                 <div class = 'input_code'>
-                    <input type="text" name="input-code" placeholder="Введіть код">
+                    <input type="text" name="code" placeholder="Введіть код">
                     <button class="button_code" type="submit">ПРИЄДНАТИСЬ</button> 
                 </div> 
 
