--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -117,7 +117,22 @@ main {
     width: 294px;
 }
 
-
+#lobby {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    min-height: 200px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s   ease;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+}
 
 
 
