--- a/host_app/static/css/hostingroom.css
+++ b/host_app/static/css/hostingroom.css
@@ -3,6 +3,12 @@
     color: white;
 }
 
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #1e1e1e;
+}
+
 .room-info {
     position: relative;
     width: calc(100% - 220px);
