--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -135,5 +135,31 @@ main {
 }
 
 
+#waitingDiv {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    left: 0;
+    top: 50%;    
+    transform: translateY(-50%);
+    align-items: center;
+    justify-content: center;
+    background-color: #171717;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s ease; 
+    z-index: 10;
+}
 
+#waitingDiv.waiting-div {
+    opacity: 0.8;
+    visibility: visible;
+}
+#waitingDiv h2 {
+    font-family: "Inter";
+    font-weight: bold;     
+    font-size: 40px;
+    color: white;
+}
 
